force-app/main/default/objects/Access__c/Access__c.object-meta.xml
<CustomObject>
    <label>Access</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>