force-app/main/default/objects/Access__c/fields/Access_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Expire_Date__c</fullName>
    <label>Access Expire Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>