force-app/main/default/objects/Access__c/fields/Access_Expire_Time__c.field-meta.xml
<CustomField>
    <fullName>Access_Expire_Time__c</fullName>
    <label>Access Expire Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>