force-app/main/default/objects/Access__c/fields/Current_Profile__c.field-meta.xml
<CustomField>
    <fullName>Current_Profile__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Profile</label>
    <type>Text</type>
</CustomField>