force-app/main/default/objects/Access__c/fields/Deployment_Information__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Information</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Access</relationshipLabel>
    <relationshipName>Access</relationshipName>
    <type>Lookup</type>
</CustomField>