force-app/main/default/objects/Access__c/fields/Permission_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Update__c</fullName>
    <label>Permission to Update</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_For_Permission_Set__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Buyer Manager</fullName>
            </value>
            <value>
                <fullName>C360 High Scale Flow Integration User</fullName>
            </value>
            <value>
                <fullName>Commerce Admin</fullName>
            </value>
            <value>
                <fullName>Contact Center Admin</fullName>
            </value>
            <value>
                <fullName>Contact Center Agent</fullName>
            </value>
            <value>
                <fullName>Contact Center Supervisor</fullName>
            </value>
            <value>
                <fullName>CRM User</fullName>
            </value>
            <value>
                <fullName>Experience Profile Manager</fullName>
            </value>
            <value>
                <fullName>Facility Manager</fullName>
            </value>
            <value>
                <fullName>FieldServiceMobile StandardPermSet</fullName>
            </value>
            <value>
                <fullName>Merchandiser</fullName>
            </value>
            <value>
                <fullName>Order Management Agent</fullName>
            </value>
            <value>
                <fullName>Order Management Operations Manager</fullName>
            </value>
            <value>
                <fullName>Order Management Shopper</fullName>
            </value>
            <value>
                <fullName>Order Management Store Associate</fullName>
            </value>
            <value>
                <fullName>Queue Manager</fullName>
            </value>
            <value>
                <fullName>Sales Cloud User</fullName>
            </value>
            <value>
                <fullName>Sales Engagement Basic User</fullName>
            </value>
            <value>
                <fullName>Salesforce Apex Guru</fullName>
            </value>
            <value>
                <fullName>Salesforce CMS Integration Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce Console User</fullName>
            </value>
            <value>
                <fullName>SCRT2 Integration User</fullName>
            </value>
            <value>
                <fullName>Seas Indexing C2C User Perm</fullName>
            </value>
            <value>
                <fullName>Security Center Integration User</fullName>
            </value>
            <value>
                <fullName>Service Cloud User</fullName>
            </value>
            <value>
                <fullName>Shopper</fullName>
            </value>
            <value>
                <fullName>Slack Service User</fullName>
            </value>
            <value>
                <fullName>Standard Einstein Activity Capture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>