force-app/main/default/objects/Access__c/fields/Profile_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Profile_to_Update__c</fullName>
    <label>Profile to Update</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_For_Profile__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Custom: Marketing Profile</fullName>
            </value>
            <value>
                <fullName>Custom: Sales Profile</fullName>
            </value>
            <value>
                <fullName>Custom: Support Profile</fullName>
            </value>
            <value>
                <fullName>Custom Standard Admin</fullName>
            </value>
            <value>
                <fullName>Marketing User</fullName>
            </value>
            <value>
                <fullName>Minimum Access - Salesforce</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Solution Manager</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>