force-app/main/default/objects/Access__c/fields/Request_For_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Permission_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request For Permission Set</label>
    <type>Checkbox</type>
</CustomField>