force-app/main/default/objects/Access__c/fields/Request_For_Profile__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request For Profile</label>
    <type>Checkbox</type>
</CustomField>