force-app/main/default/objects/Access__c/validationRules/PermissionSet_to_be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>PermissionSet_to_be_Updated</fullName>
    <active>true</active>
    <description>PermissionSet_to_be_Updated</description>
    <errorConditionFormula>AND( Request_For_Permission_Set__c ,ISPICKVAL( Permission_to_Update__c , &apos;&apos;))</errorConditionFormula>
    <errorMessage>Select Permission Set to update</errorMessage>
</ValidationRule>