force-app/main/default/objects/Access__c/validationRules/Profile_to_be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Profile_to_be_Updated</fullName>
    <active>true</active>
    <description>Profile_to_be_Updated</description>
    <errorConditionFormula>AND(Request_For_Profile__c,ISPICKVAL(Profile_to_Update__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>Select Profile to be Updated</errorMessage>
</ValidationRule>